--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -3232,10 +3232,10 @@ tbody.collapse.show {
 .dropdown-menu {
     position: absolute;
     top: 100%;
-    left: 0;
+    right: 0;
     z-index: 1000;
     display: none;
-    float: left;
+    float: right;
     min-width: 10rem;
     padding: 0.5rem 0;
     margin: 0.125rem 0 0;
@@ -36420,7 +36420,7 @@ img {
     padding-right: 0px !important;
 
     .top-header {
-        background-color: black !important;
+        background-color: #e6f0fa !important;
     }
 
     .four-icon {
@@ -56914,7 +56914,7 @@ body.ios.rental-process-layout .position-sticky-top {
 }
 
 .bag-page .placeholder {
-    background-color: #FAF9F7;
+    background-color: white;
     font-family: "europa-bold";
     font-size: 18px;
     letter-spacing: 1.8px;
@@ -59424,6 +59424,8 @@ button:focus {
 
 .signIn-form-container {
     background: #592530;
+    /* height: 100vh; */
+    padding-bottom: 4.4rem;
 }
 
 .signIn-form-row {
