code updated|Fayyaz|redux

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -59430,8 +59430,8 @@ button:focus {
 }
 
 .signIn-form-row {
-    padding-top: 3rem !important;
-    padding: 3rem 5rem;
+   
+    padding: 7rem;
 }
 
 .model-first-div {
