--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -26627,7 +26627,9 @@ div.filter-bar select {
     text-align: center;
     padding: 15px 1em 25px 1em;
     z-index: 1050;
-    margin-top: 10px
+    margin-top: 19px;
+    margin-left: -15rem !important;
+    
 }
 
 .header-dropdown .divider {
@@ -26680,6 +26682,7 @@ div.filter-bar select {
     margin-top: 11px
 }
 
+
 .rental-bag-dropdown-btn {
     text-decoration: none
 }
@@ -26722,6 +26725,7 @@ div.filter-bar select {
     border: 1px solid #DEDEDE;
     border-radius: 0;
     margin-top: 11.51px;
+    margin-left: -20rem !important;
     padding: 15px 25px 32px
 }
 
@@ -27157,7 +27161,7 @@ div.filter-bar select {
     margin-bottom: 20px;
     transition: all 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
     font-size: 12px;
-    line-height: 12px;
+    line-height: 16px;
     letter-spacing: 2px;
     text-transform: uppercase;
     display: block
