--- a/src/css/footer-pages.css
+++ b/src/css/footer-pages.css
@@ -3665,13 +3665,14 @@ button:focus {
 
 .btn-primary {
     border: 1px solid #232323;
-    font-size: 12px;
+    font-size: 14px;
     letter-spacing: 1px;
-    line-height: 14px;
+    line-height: 1.5;
     text-align: center;
     background: rgba(0, 0, 0, 0);
-    padding: 20px 25px 19px;
-    text-transform: uppercase
+    padding: 0.375rem 0.75rem;
+    text-transform: uppercase;
+    border-radius: 5px;
 }
 
 .btn-primary:hover:not(.no-mobile-hover) {
