--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -566,7 +566,7 @@ mark,
 
 .img-fluid {
     max-width: 100%;
-    height: 350px;
+    height: 250px;
 }
 
 .img-thumbnail {
@@ -2700,9 +2700,10 @@ fieldset:disabled a.btn {
 }
 
 .btn-danger {
+    
     color: #fff;
     background-color: #dc3545;
-    border-color: #dc3545
+    border-color: #dc3545;
 }
 
 .btn-danger:hover {
@@ -9767,6 +9768,10 @@ body.component-based-page h4 {
     cursor: hand
 }
 
+.slick-slider .slick-track{
+    display: flex;
+    gap: 25px;
+}
 .slick-slider .slick-track,
 .slick-slider .slick-list {
     transform: translate3d(0, 0, 0)
@@ -15744,7 +15749,7 @@ hr {
     font-size: 14px;
     line-height: 14px;
     border-radius: 0;
-    text-transform: uppercase
+    text-transform: uppercase;
 }
 
 .btn-primary:hover {
@@ -24321,7 +24326,7 @@ div.filter-bar select {
     font-size: 14px;
     line-height: 15px;
     color: black;
-    font-weight: bold
+    font-weight: normal;
 }
 
 .item-card .item-rrp {
@@ -24329,7 +24334,7 @@ div.filter-bar select {
     font-size: 12px;
     line-height: 12px;
     letter-spacing: 0.6px;
-    margin-top: 6px
+    margin-top: 6px;
 }
 
 .item-card .item-heart {
@@ -26815,8 +26820,8 @@ div.filter-bar select {
     background-color: #fff;
     box-shadow: 0px -2px 10px #00000029;
     display: none;
-    height: 58px;
-    padding: 0 21.5px
+    height: 0px;
+    padding: 20px 21.5px
 }
 
 .main-mobile-header-section a:hover {
@@ -58198,7 +58203,7 @@ button:disabled,
 .collage-main .collage-single .collage-content .title {
     color: black;
     font-weight: 500;
-    font-size: 50px;
+    font-size: 70px;
     text-transform: uppercase;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     letter-spacing: 4px;
@@ -58208,6 +58213,7 @@ button:disabled,
     font-size: 17px;
     color: black;
     font-weight: 600;
+    transition: all .4s ease-in-out !important;
 }
 
 /* galleryt section  */
@@ -58238,14 +58244,14 @@ button:disabled,
     color: black;
 }
 
-.gallery-main .icons i {
+ .follow-us .icons .icon-social {
     color: white;
     border-radius: 50%;
     padding: 5px;
-    width: 40px;
-    height: 40px;
+    width: 25px;
+    height: 25px;
     line-height: 30px;
-    font-size: 18px;
+    font-size: 20px !important;
     background-color: black;
     cursor: pointer;
 }
@@ -58307,7 +58313,7 @@ button:disabled,
         /* text-align: start !important; */
         padding: 0rem !important;
         text-align: center !important;
-        ;
+        
     }
 
     .collage-main .collage-single .collage-content .title {
@@ -58996,10 +59002,10 @@ button:focus {
     transition: all 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
     font-size: 14px;
     font-weight: 600;
-    line-height: 12px;
+    line-height: 18px;
     letter-spacing: 2px;
     /* text-transform: uppercase; */
-    display: block
+    display: block;
 }
 
 
