--- a/src/css/admin-header.css
+++ b/src/css/admin-header.css
@@ -3,13 +3,6 @@ body {
     margin: 0;
 }
 
-
-
-
-.camera-div {
-    list-style: none;
-}
-
 header{
     position: sticky !important;
     top: 0 !important;
@@ -43,15 +36,11 @@ header{
     border: none !important;
 }
 
-.search-icon {
-    width: 20%;
-    float: left;
-}
-
 .main-nav-brand-admin {
     display: flex;
     align-items: center;
     gap: 2rem;
+    width: 80%;
     float: left;
     padding-left: 2.2rem;
 }
@@ -60,7 +49,7 @@ header{
     padding: 10px;
     border-radius: 25px;
     border: 2px solid black;
-    width: 100%;
+    width: 50%;
     color: black;
     line-height: 0;
     font-weight: 600;
@@ -79,10 +68,6 @@ header{
     margin-right: 12px;
 }
 
-.navbar-nav {
-    margin-left: 20px;
-}
-
 .navbar-brand-admin {
     color: #FCC810;
     font-size: 35px;
@@ -99,45 +84,8 @@ header{
     color: #FCC810;
 }
 
-.navbar-admin .create-btn {
-    background: #FCC810;
-    color: black;
-    font-weight: 600;
-    border: none;
-    outline: none;
-    padding: 3px 5px;
-}
-
-.navbar-admin .create-btn:focus {
-    background: #FCC810;
-}
-
-.navbar-admin .create-btn i {
-    margin-left: 15px;
-    color: #100B43;
-    background: white;
-    padding: 6px;
-    font-size: 18px;
-    border-radius: 50%;
-}
-
-.navbar-admin .chat-link-item {
-    margin-left: 25px;
-}
-
-.navbar-admin .chat-link-item a {
-    color: white;
-    font-weight: 500;
-    font-size: 14px;
-}
-
-.navbar-admin .chat-link-item a span {
-    color: red;
-}
-
 .notifications i,
-.call i,
-.lines i {
+.call i {
     padding: 10px 5px;
     cursor: pointer;
     font-size: 20px;
@@ -224,278 +172,18 @@ form .form-label{
     letter-spacing: 1.2px;
     text-transform: capitalize;
 }
-.side-dashboard {
-    background: #110C46;
-    height: 90vh;
-}
-
-.side-dashboard label {
-    color: #ffff;
-}
-
-.side-dashboard .bg-color-dashboard-text {
-    background-color: #0C6376;
-    margin-left: 2px;
-    border-radius: 4px;
-
-}
-
-.bg-color-dashboard-text img {
-    margin-left: 10px;
-}
-
-.cheelbase-universe-text {
-    width: 90%;
-    margin: 0 auto;
-    margin-top: 50px;
-
-    background-color: #0C6376;
-    padding: 10px;
-    border-radius: 4px;
-}
-
-.admin-background-color {
-    background-color: #137388;
-    border-radius: 10px;
-}
-
-.boxes {
-    background-color: #FFFFFF;
-    height: 120px;
-    padding: 10px;
-    border-radius: 10px;
-    width: 200px;
-}
-
-.img-bg img {
-    background-color: #0C637659;
-    padding: 10px;
-    border-radius: 50%;
-}
-
-.boxes label {
-    font-family: sans-serif;
-    font-weight: 500;
-}
-
-.full-background-color {
-    background-color: #110C46 !important;
-    height: 100vh;
-}
 
 /* Add Product */
-.custom-file-input-admin {
-    position: relative;
-}
-
-.custom-file-container-admin {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #f0f0f0;
-    padding: 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    height: 230px;
-    border: 2px solid greenyellow;
-    margin-top: 20px;
-}
-
-.custom-file-icon-admin {
-    margin-right: 10px;
-    /* Adjust the spacing */
-}
 
 /* Style the file input text */
-.custom-file-text-admin {
-    color: #333;
-    /* Set the text color */
-}
-
-.custom-file-text-admin span {
-    font-size: 17px !important;
-    font-weight: 500;
-
-}
-
-.order-page-admin ol li button {
-    background: none;
-    border: 1px solid white;
-    color: white;
-    width: 110px;
-    border-radius: 6px;
-    padding: 6px;
-    font-size: 15px;
-    font-weight: 500;
-    font-family: sans-serif;
-    text-transform: uppercase;
-}
-
-.order-page-admin ol li button:hover {
-    background-color: white;
-    color: black;
-    transform: scale(1.1);
-    transition: 0.5s;
-}
-
-.custom-file-icon-admin i {
-    color: black;
-}
-
-.move-step-admin {
-    background: none;
-    border: 1px solid white;
-    color: white;
-    width: 150px;
-    border-radius: 6px;
-    padding: 6px;
-    font-size: 15px;
-    font-weight: 500;
-    font-family: sans-serif;
-    text-transform: uppercase;
-    margin-top: 30px;
-}
-
-.move-step-admin:hover {
-    background-color: white;
-    color: black;
-    transform: scale(1.1);
-    transition: 0.5s;
-}
 
 /* price product */
-.input-number-admin input {
-    padding: 7px;
-    border-radius: 5px;
-}
-
-.input-number-admin label {
-    text-transform: uppercase;
-    font-family: sans-serif;
-    font-weight: 600;
-}
 
 /* button  */
-.checkbox-apple {
-    position: relative;
-    width: 50px;
-    height: 25px;
-    margin: 20px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-.checkbox-apple label {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 50px;
-    height: 25px;
-    border-radius: 50px;
-    background: linear-gradient(to bottom, #b3b3b3, #e6e6e6);
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-.checkbox-apple label:after {
-    content: '';
-    position: absolute;
-    top: 1px;
-    left: 1px;
-    width: 23px;
-    height: 23px;
-    border-radius: 50%;
-    background-color: #fff;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
-    transition: all 0.3s ease;
-}
-
-.checkbox-apple input[type="checkbox"]:checked+label {
-    background: linear-gradient(to bottom, gray, gray);
-}
-
-.checkbox-apple input[type="checkbox"]:checked+label:after {
-    transform: translateX(25px);
-}
-
-.checkbox-apple label:hover {
-    background: linear-gradient(to bottom, #b3b3b3, #e6e6e6);
-}
-
-.checkbox-apple label:hover:after {
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
-}
-
-.yep {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 50px;
-    height: 25px;
-}
-
-.size-price {
-    width: 100%;
-    /* margin: 0 auto; */
-}
-
-.size-price span b {
-    font-size: 17px;
-    /* font-weight: 500; */
-    font-family: sans-serif;
-    margin: 0px 30px 0px 0px;
-}
-
-.size-price1 {
-    width: 100%;
-    float: left;
-}
-
-.size-price1 span {
-    width: 13%;
-    float: left;
-
-}
-
-.size-price input {
-    width: 90%;
-    float: left;
-
-}
-
-.number-type {
-    padding: 5px;
-    width: 80%;
-    border-radius: 7px;
-}
 
 /* view product */
-.section-price-admin {
-    border: 1px solid white;
-    margin-top: 17px;
-    margin: 10px;
-    padding: 8px 0px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    width: 20%;
-}
-
-.section-price-admin span {
-    font-size: 13px !important;
-}
 
 /* image _ category */
-.custom-file-wrapper-admin {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    height: calc(2.25rem + 2px);
-    margin-bottom: 0;
-}
 
 /* .custom-file-input-field {
     position: relative;
@@ -506,53 +194,11 @@ form .form-label{
     opacity: 0;
 } */
 
-.custom-file-input-label-admin {
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    z-index: 1;
-    height: calc(2.25rem + 2px);
-    padding: .375rem .75rem;
-    line-height: 1.5;
-    color: #495057;
-    background-color: #fff;
-    border: 1px solid #ced4da;
-    border-radius: .25rem;
-}
-
-.category-btn:hover {
-    background-color: gray;
-    color: #100B43;
-}
-
 /* edit page */
-.container-admin {
-    /* max-width: 600px; */
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-}
-
-.form-group-admin {
-    margin-bottom: 20px;
-}
 
 /* login page  */
 .content img {
     margin: 41px 0px;
-  }
-  
-  .admin-login-container {
-    border-radius: 1px;
-    padding: 30px 40px 20px 40px;
-    box-sizing: border-box;
-    font-family: sans-serif;
-    color: #737373;
-    border: 1px solid rgb(219, 219, 219);
-    background: rgb(148, 46, 46) !important;
-    text-align: center;
   }
   
   .container svg {
@@ -566,141 +212,8 @@ form .form-label{
     border-radius: 10px;
     padding: 20px;
   }
-  .content__form {
-    display: flex;
-    flex-direction: column;
-    row-gap: 14px;
-  }
-  
-  .content__inputs {
-    display: flex;
-    flex-direction: column;
-    row-gap: 8px;
-  }
-  
-  .content__form label {
-    border: 1px solid rgb(219, 219, 219);
-    display: flex;
-    align-items: center;
-    position: relative;
-    min-width: 268px;
-    height: 38px;
-    background: rgb(250, 250, 250);
-    border-radius: 3px;
-  }
-  
-  .content__form span {
-    position: absolute;
-    text-overflow: ellipsis;
-    transform-origin: left;
-    font-size: 12px;
-    left: 8px;
-    pointer-events: none;
-    transition: transform ease-out .1s
-  }
-  
-  .content__form input {
-    width: 100%;
-    background: inherit;
-    border: 1px solid black;
-    outline: none;
-    padding: 9px 8px 7px 8px;
-    text-overflow: ellipsis;
-    font-size: 16px;
-    border-radius: 5px;
-    vertical-align: middle;
-  }
-  
-  .content__form input:valid+span {
-    transform: scale(calc(10 / 12)) translateY(-10px);
-  }
-  
-  .content__form input:valid {
-    padding: 14px 0 2px 8px;
-    font-size: 12px;
-  }
-  
-  .content__or-text {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-transform: uppercase;
-    font-size: 13px;
-    column-gap: 18px;
-    margin-top: 18px;
-  }
-  
-  .content__or-text span:nth-child(3),
-  .content__or-text span:nth-child(1) {
-    display: block;
-    width: 100%;
-    height: 1px;
-    background-color: rgb(219, 219, 219);
-  }
-  
-  .content__forgot-buttons {
-    display: flex;
-    flex-direction: column;
-    margin-top: 28px;
-    row-gap: 21px;
-  }
-  
-  .content__forgot-buttons button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    column-gap: 8px;
-    background: none;
-    border: none;
-    cursor: pointer;
-    font-size: 12px;
-    color: #00376b;
-  }
-  
-  .content__forgot-buttons button:first-child {
-    color: #385185;
-    font-size: 14px;
-    font-weight: 600;
-  }
-  
-  .content__form button {
-    background: rgb(148, 46, 46);
-    color: white;
-    border: none;
-    border-radius: 8px;
-    font-weight: 700;
-    font-size: 14px;
-    padding: 7px 16px;
-    cursor: pointer;
-  }
-  
-  .content__form button:hover {
-    background: rgb(89, 37, 48);
-  }
-  
-  .content__form button:active:not(:hover) {
-    background: rgb(0, 149, 246);
-    opacity: .7;
-  }
 
 /* login page end */
-
-.Category-admin {
-    width: 100%;
-    float: left;
-}
-
-.brand-admin {
-    width: 100%;
-    float: left;
-}
-
-.brand-admin input {
-    width: 100%;
-    margin: 0 auto;
-    border-radius: 4px;
-    padding: 5px;
-}
 
 
 
@@ -723,8 +236,7 @@ form .form-label{
 }
 
 .footer__menu,
-.footer__menus,
-.footer__subscribe {
+.footer__menus {
     width: 100%;
     /* min-width: 1px; */
 }
@@ -796,37 +308,6 @@ form .form-label{
     color: hsla(0, 0%, 100%, .7)
 }
 
-
-.footer__copyright {
-    margin-top: 20px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center
-}
-
-.footer__copyright-logo {
-    font-size: 0
-}
-
-.footer__copyright-logo .ico {
-    font-size: 32px
-}
-
-.footer__copyright-text {
-    margin-top: 15px;
-    font-size: 12px
-}
-
 .footer__separator {
     margin-top: 20px;
     margin-bottom: 40px;
@@ -860,7 +341,7 @@ form .form-label{
 }
 
 .footer__top-searches .footer__menu.no-title {
-    padding-top: 0;
+    padding-top: 36px;
     padding-bottom: 0
 }
 
@@ -887,19 +368,6 @@ form .form-label{
     -webkit-box-ordinal-group: 4;
     -ms-flex-order: 3;
     order: 3
-}
-
-
-.footer__bottom {
-    -webkit-box-ordinal-group: 6;
-    -ms-flex-order: 5;
-    order: 5
-}
-
-.footer__copyright {
-    -webkit-box-ordinal-group: 7;
-    -ms-flex-order: 6;
-    order: 6
 }
 
 
@@ -937,15 +405,6 @@ form .form-label{
         order: 4
     }
 
-    .footer__bottom {
-        display: none
-    }
-
-    .footer__copyright {
-        margin-top: 10px;
-        margin-bottom: 10px
-    }
-
     .footer__top-searches .footer__menu {
         -webkit-box-flex: 0;
         -ms-flex: 0 0 16.66667%;
@@ -976,13 +435,6 @@ form .form-label{
     }
 }
 @media (max-width:600px){
-  
-    .footer__main .footer_menu{
-        margin-bottom: 15px;
-    }
-    .footer_menus{
-        padding-left: 1rem !important;
-    }
     .footer__separator.footer__separator--one{
         display: none;
     }
@@ -995,62 +447,8 @@ form .form-label{
     }
 }
 
-
-@media only screen and (min-width:1200px) {
-    .footer__subscribe .btn {
-        min-width: 110px
-    }
-}
-
-@media only screen and (min-width:992px) {
-
-    .cart-package__footer {
-        border-top: 2px solid #fff
-    }
-}
-
-.cart-package__footer .cart-package__text {
-    padding: 20px
-}
-
-.cart-package__footer .cart-package__text+.cart-package__text {
-    padding-top: 0;
-    margin-top: -5px
-}
-
-.cart-package__footer .cart-package__text {
-    padding: 10px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between
-}
-
-.cart-package__footer {
-    border-top: 1px solid #d3dede
-}
-
 footer {
     display: block;
-}
-
-.ui-group__autocomplete__footer {
-    padding: 10px
-}
-
-.ui-group__autocomplete__footer .btn {
-    width: 100%
-}
-
-.ui-group__autocomplete__footer .powered-by {
-    text-align: right;
-    margin-top: 10px
-}
-
-.ui-group__autocomplete__footer .powered-by img {
-    height: 14px
 }
 
 
@@ -1097,134 +495,6 @@ footer {
     padding: 1rem;
 }
 
-.scroll-four-img img {
-    width: 80%;
-    height: 150px;
-    margin: 10px;
-    padding: 5px;
-}
-
-.scroll-four-img img:hover {
-    border: 1px solid rgb(107, 106, 106);
-}
-
-.scroll-four-img1 img {
-    width: 100%;
-    height: 600px;
-}
-
-.four-survey-icon {
-    display: flex;
-    flex-direction: row;
-}
-
-.four-survey-icon i {
-    font-size: 8px;
-    color: black;
-    margin-top: 10px;
-    margin-left: 4px;
-}
-
-.Bottega-Veneta-width h2 {
-    font-size: 40px;
-    font-weight: 300;
-    font-family: 'Times New Roman', Times, serif;
-}
-
-.boxesthree .box-three {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-}
-
-.boxesthree .box-three span {
-    width: 50px;
-    height: 40px;
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    border: 1px solid black;
-    margin: 8px;
-}
-
-.boxesthree .box-three span:hover {
-    background-color: rgb(148, 46, 46);
-    color: white;
-    border: white;
-}
-
-.RENTAL-PERIOD .box-three span {
-    width: 170px;
-    height: 40px;
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    border: 1px solid black;
-    margin: 8px;
-}
-
-.RENTAL-PERIOD .box-three span:hover {
-    background-color: rgb(148, 46, 46);
-    color: white;
-    border: white;
-}
-
-.RENTAL-PERIOD select {
-    width: 95%;
-    padding: 7px;
-    margin-top: 8px;
-
-}
-
-.btn-BOOK-NOW {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-}
-
-.btn-BOOK-NOW button {
-    width: 75%;
-    padding: 15px;
-    border: 1px solid black;
-    text-align: center;
-    align-items: center;
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-    text-transform: uppercase;
-    background-color: whitesmoke;
-    font-weight: bold;
-    font-size: 14px;
-}
-
-.btn-BOOK-NOW button:hover {
-    background-color: rgb(148, 46, 46);
-    color: white;
-    border: white;
-}
-
-.btn-BOOK-NOW i {
-    width: 20%;
-    padding: 15px;
-    border: 1px solid black;
-    text-align: center;
-    align-items: center;
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-    text-transform: uppercase;
-    background-color: whitesmoke;
-    font-weight: bold;
-    font-size: 20px;
-    margin-left: 8px;
-}
-
-.btn-BOOK-NOW i:hover {
-    background-color: rgb(148, 46, 46);
-    color: white;
-    border: white;
-}
-
 
 /* model on image */
 .modal-dialog {
@@ -1266,132 +536,4 @@ footer {
     -ms-flex: 1 1 auto;
     flex: 1 1 auto;
     padding: 1rem;
-}
-
-.scroll-four-img img {
-    width: 80%;
-    height: 150px;
-    margin: 10px;
-    padding: 5px;
-}
-
-.scroll-four-img img:hover {
-    border: 1px solid rgb(107, 106, 106);
-}
-
-.scroll-four-img1 img {
-    width: 100%;
-    height: 600px;
-}
-
-.four-survey-icon {
-    display: flex;
-    flex-direction: row;
-}
-
-.four-survey-icon i {
-    font-size: 8px;
-    color: black;
-    margin-top: 10px;
-    margin-left: 4px;
-}
-
-.Bottega-Veneta-width h2 {
-    font-size: 40px;
-    font-weight: 300;
-    font-family: 'Times New Roman', Times, serif;
-}
-
-.boxesthree .box-three {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-}
-
-.boxesthree .box-three span {
-    width: 50px;
-    height: 40px;
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    border: 1px solid black;
-    margin: 8px;
-}
-
-.boxesthree .box-three span:hover {
-    background-color: rgb(148, 46, 46);
-    color: white;
-    border: white;
-}
-
-.RENTAL-PERIOD .box-three span {
-    width: 170px;
-    height: 40px;
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    border: 1px solid black;
-    margin: 8px;
-}
-
-.RENTAL-PERIOD .box-three span:hover {
-    background-color: rgb(148, 46, 46);
-    color: white;
-    border: white;
-}
-
-.RENTAL-PERIOD select {
-    width: 95%;
-    padding: 7px;
-    margin-top: 8px;
-
-}
-
-.btn-BOOK-NOW {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-}
-
-.btn-BOOK-NOW button {
-    width: 75%;
-    padding: 15px;
-    border: 1px solid black;
-    text-align: center;
-    align-items: center;
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-    text-transform: uppercase;
-    background-color: whitesmoke;
-    font-weight: bold;
-    font-size: 14px;
-}
-
-.btn-BOOK-NOW button:hover {
-    background-color: rgb(148, 46, 46);
-    color: white;
-    border: white;
-}
-
-.btn-BOOK-NOW i {
-    width: 20%;
-    padding: 15px;
-    border: 1px solid black;
-    text-align: center;
-    align-items: center;
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-    text-transform: uppercase;
-    background-color: whitesmoke;
-    font-weight: bold;
-    font-size: 20px;
-    margin-left: 8px;
-}
-
-.btn-BOOK-NOW i:hover {
-    background-color: rgb(148, 46, 46);
-    color: white;
-    border: white;
 }
